[tool.poetry]
name = "crypto_parser"
version = "0.1.0"
description = ""
authors = ["Andrey Letenkov <andletenkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
schedule = "^1.1.0"
gspread = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
